--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,11 +2,13 @@ $primary: #F93069;
 $secondary: #171C3C;
 $white: #ffffff;
 $black: #000000;
-$text-color: #9e9fa8;
-
+$text-color: #545454;
+$blue:#38B6FF;
+$green:#7ED957;
 //font families
 $font-bold : 'Montserrat-Bold';
 $font-light : 'Montserrat-Light';
 
 //font-sizes
-$font-size-md : 16px;
+$font-size-md : 15px;
+$font-size-sm : 12px;
