--- a/src/uiComponents/CFooter/_CFooter.scss
+++ b/src/uiComponents/CFooter/_CFooter.scss
@@ -4,7 +4,7 @@
     .inner-container{
         display: flex;
         justify-content: space-between;
-        padding: 50px 50px 0px 50px;
+        padding: 50px 50px 50px 50px;
         background-color: $white;
         ul{
             display: flex;
@@ -14,6 +14,8 @@
             &:first-of-type{
                 width: 500px;
                 margin-top: 0px;
+                justify-content: space-between;
+                height: 300px;
             }
             .logo{
                 width: 300px;
