--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -10,5 +10,6 @@ $font-bold : 'Montserrat-Bold';
 $font-light : 'Montserrat-Light';
 
 //font-sizes
+$font-size-lg : 28px;
 $font-size-md : 15px;
 $font-size-sm : 12px;
