--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -1,2 +1,3 @@
 @include font-face('Montserrat-Light', 'Montserrat-Light');
+@include font-face('Montserrat-Medium', 'Montserrat-Medium');
 @include font-face('Montserrat-Bold','Montserrat-Bold');
