--- a/src/uiComponents/CButton/_CButtons.scss
+++ b/src/uiComponents/CButton/_CButtons.scss
@@ -9,4 +9,8 @@
     width: max-content;
     border: none;
     background: transparent linear-gradient(90deg, #FF245E 0%, #C864DD 100%) 0% 0% no-repeat padding-box;
+    &.large{
+        height: 43px;
+         padding: 0px 40px;
+    }
 }
