login form is completed

--- a/src/uiComponents/_index.scss
+++ b/src/uiComponents/_index.scss
@@ -1,4 +1,4 @@
 @import "CHeader/CHeader";
 @import "CFooter/CFooter";
-@import "CButton/CButtons";
-@import "CSlider/CSlider";
+@import "shared/CButton/CButtons";
+@import "shared/CSlider/CSlider";
