--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -51,3 +51,93 @@ img{
     :first-child{
     }
 }
+
+// input styling
+.c-input {
+  position: relative;
+  input {
+    // color: $text-color;
+    // font-family: $font-medium;
+    font-size: 15px;
+    box-shadow: 0px 0px 15px #00000026 !important;
+    border: none !important;
+    border-radius: 100px !important;
+    height: 46px !important; 
+    padding: 0 18px !important;
+    box-shadow: 0 2px 9px rgba(1, 3, 17, 0.03);
+    background: $white !important;
+    &.ant-input-lg{
+      width: 350px;
+    }
+    &::placeholder {
+      // color: $text-color;
+      opacity: 0.4;
+    }
+
+    &:hover {
+      border: none;
+      border-right-width:0px !important;
+    }
+
+    &:focus {
+      border-color: $primary;
+    }
+  }
+
+  &.c-input-with-icon {
+    .ant-form-item-control-input-content {
+      position: relative;
+
+      svg {
+        position: absolute;
+        left: 15px;
+        z-index: 1;
+        font-size: 18px;
+        top: 13px;
+        // color: $text-color;
+      }
+
+      input {
+        padding: 0 15px 0 45px;
+      }
+    }
+  }
+
+  .ant-form-item-explain {
+    div {
+      font-size: 14px;
+      // font-family: $font-regular;
+    }
+  }
+}
+
+.ant-input-password{
+  border: none !important;
+  width: auto;
+  .ant-input-suffix{
+    display: none;
+  }
+}
+.ant-form-item-control-input-content{
+  display: flex;
+  flex-direction: column;
+}
+.ant-input-affix-wrapper {
+  padding:0px ;
+  &:hover{
+    border: none;
+  }
+  &:focus{
+    border: none;
+    box-shadow: none;
+  }
+}
+.ant-checkbox-checked {
+.ant-checkbox-inner {
+  background-color: $primary;
+  border-color: $white;
+}
+}
+.ant-checkbox-wrapper:hover .ant-checkbox-inner, .ant-checkbox:hover .ant-checkbox-inner, .ant-checkbox-input:focus + .ant-checkbox-inner {
+  border-color: $primary;
+}
