--- a/src/pages/home/_Home.scss
+++ b/src/pages/home/_Home.scss
@@ -6,7 +6,7 @@
         margin: 100px 0px 0px 0px;
         
         h3{
-            font-size: $font-size-md;
+            font-size: $font-size-lg;
             text-decoration: underline;
             text-underline-position: under;
         }
