--- a/src/uiComponents/shared/CButton/_CButtons.scss
+++ b/src/uiComponents/shared/CButton/_CButtons.scss
@@ -1,6 +1,5 @@
 .c-button{
     padding: 5px 10px 5px 10px;
-    background-color: $primary;
     color: #ffffff;
     height: 34px;
     padding: 4px 25px;
@@ -9,8 +8,14 @@
     width: max-content;
     border: none;
     background: transparent linear-gradient(90deg, #FF245E 0%, #C864DD 100%) 0% 0% no-repeat padding-box;
-    &.large{
-        height: 43px;
+    span{
+        color:$white;
+    }
+    &.large {
          padding: 0px 40px;
+    }
+    &:hover{
+        background: transparent linear-gradient(90deg, #FF245E 0%, #C864DD 100%) 0% 0% no-repeat padding-box;
+
     }
 }
