--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -59,12 +59,12 @@ img{
     // color: $text-color;
     // font-family: $font-medium;
     font-size: 15px;
-    box-shadow: 0px 0px 15px #00000026 !important;
+    box-shadow: 3px ​2px 12px #00000026 !important;
     border: none !important;
     border-radius: 100px !important;
     height: 46px !important; 
     padding: 0 18px !important;
-    box-shadow: 0 2px 9px rgba(1, 3, 17, 0.03);
+    box-shadow: 0 2px 9px rgba(1, 3, 17, 0.09);
     background: $white !important;
     &.ant-input-lg{
       width: 350px;
@@ -124,12 +124,14 @@ img{
 }
 .ant-input-affix-wrapper {
   padding:0px ;
+  border-radius: 40px;
   &:hover{
     border: none;
   }
   &:focus{
     border: none;
     box-shadow: none;
+    box-shadow: 3px ​2px 12px #00000026 !important;
   }
 }
 .ant-checkbox-checked {
