login is updated with latest design

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -9,6 +9,7 @@ $green:#7ED957;
 //font families
 $font-bold : 'Montserrat-Bold';
 $font-light : 'Montserrat-Light';
+$font-medium : 'Montserrat-Medium';
 
 //font-sizes
 $font-size-lg : 28px;
