--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -67,7 +67,7 @@ img{
     box-shadow: 0 2px 9px rgba(1, 3, 17, 0.09);
     background: $white !important;
     &.ant-input-lg{
-      width: 350px;
+      width: 400px;
     }
     &::placeholder {
       // color: $text-color;
@@ -142,4 +142,8 @@ img{
 }
 .ant-checkbox-wrapper:hover .ant-checkbox-inner, .ant-checkbox:hover .ant-checkbox-inner, .ant-checkbox-input:focus + .ant-checkbox-inner {
   border-color: $primary;
+}
+
+.ant-form-item-with-help {
+  max-height: 100px;
 }
