--- a/src/pages/login/_Login.scss
+++ b/src/pages/login/_Login.scss
@@ -1,5 +1,5 @@
 .login-container{
-    width: 800px;
+    width: 900px;
     border-radius: 20px 20px 0px 0px;
     box-shadow: 0px 0px 15px #00000026;
     padding:0px !important;
@@ -8,7 +8,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 250px;
+        height: 220px;
         background: transparent url("../../assets/images/login-background.png") 0% 0% no-repeat padding-box;
         background-position: top;
         background-repeat: no-repeat;
@@ -20,22 +20,52 @@
     }
     .second-container{
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         flex-direction: column;
         max-width: 100% !important;
-        padding:30px 0px 0px 0px;
-        h3 {
+       .c-form{
+           display: flex;
+           flex-direction: column;
+           justify-content: center;
+           align-items: center;
+           padding: 40px 0px 40px 0px;
+           .form-title{
+            width: 400px;
             color:$primary;
             font-family: $font-bold;
+            font-size: $font-size-md;
+            margin-bottom: 15px;
         }
-        .alt-text{
+           .alt-text{
             font-size: $font-size-sm;
         }
         .ant-checkbox-wrapper {
             span{
                 font-size: $font-size-sm;
             }
+        }
+       }
+        
+        .user-type{
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                span{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex:1;
+                    padding: 12px 0px 12px 0px;
+                    cursor: pointer;
+                    font-family: $font-medium !important;
+                    box-shadow: 2px 3px 5px #00000026;
+                    color: $text-color;
+                    &.active{
+                        background-color: $primary;
+                        color:$white
+                    }
+                }
         }
     }
 }
