--- a/src/uiComponents/shared/CButton/_CButtons.scss
+++ b/src/uiComponents/shared/CButton/_CButtons.scss
@@ -12,9 +12,13 @@
         color:$white;
     }
     &.large {
-         padding: 0px 40px;
+        width: 200px;
     }
     &:hover{
+        background: transparent linear-gradient(90deg, #FF245E 0%, #C864DD 100%) 0% 0% no-repeat padding-box;
+
+    }
+    &:focus{
         background: transparent linear-gradient(90deg, #FF245E 0%, #C864DD 100%) 0% 0% no-repeat padding-box;
 
     }
