--- a/src/pages/login/_Login.scss
+++ b/src/pages/login/_Login.scss
@@ -1,6 +1,6 @@
 .login-container{
     width: 900px;
-    border-radius: 20px 20px 0px 0px;
+    border-radius: 20px ;
     box-shadow: 0px 0px 15px #00000026;
     padding:0px !important;
     overflow: hidden;
@@ -8,7 +8,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 220px;
+        height: 200px;
         background: transparent url("../../assets/images/login-background.png") 0% 0% no-repeat padding-box;
         background-position: top;
         background-repeat: no-repeat;
