updated signup design and added basic signup form

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -59,15 +59,18 @@ img{
     // color: $text-color;
     // font-family: $font-medium;
     font-size: 15px;
-    box-shadow: 3px ​2px 12px #00000026 !important;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, .3) !important;
     border: none !important;
     border-radius: 100px !important;
-    height: 46px !important; 
+    height: 40px !important; 
     padding: 0 18px !important;
-    box-shadow: 0 2px 9px rgba(1, 3, 17, 0.09);
+    box-shadow: 0 0 16px rgba(0, 0, 0, .3);
     background: $white !important;
     &.ant-input-lg{
       width: 400px;
+    }
+    &.ant-input-sm{
+      width: 300px;
     }
     &::placeholder {
       // color: $text-color;
@@ -131,7 +134,7 @@ img{
   &:focus{
     border: none;
     box-shadow: none;
-    box-shadow: 3px ​2px 12px #00000026 !important;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, .3) !important;
   }
 }
 .ant-checkbox-checked {
@@ -147,3 +150,14 @@ img{
 .ant-form-item-with-help {
   max-height: 100px;
 }
+
+
+.c-row{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+
