--- a/src/pages/login/_Login.scss
+++ b/src/pages/login/_Login.scss
@@ -1,7 +1,7 @@
 .login-container{
     width: 900px;
     border-radius: 20px ;
-    box-shadow: 0px 0px 15px #00000026;
+    box-shadow: 0 0 16px #00000026;
     padding:0px !important;
     overflow: hidden;
     .first-container{
@@ -13,6 +13,9 @@
         background-position: top;
         background-repeat: no-repeat;
         background-size: cover;
+        img{
+            width: 350px;
+        }
         p{
             color:$white;
             font-family: $font-bold;
