--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -52,12 +52,10 @@ img{
     }
 }
 
-// input styling
+// custom input styling
 .c-input {
   position: relative;
   input {
-    // color: $text-color;
-    // font-family: $font-medium;
     font-size: 15px;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, .3) !important;
     border: none !important;
@@ -113,7 +111,6 @@ img{
     }
   }
 }
-
 .ant-input-password{
   border: none !important;
   width: auto;
@@ -146,7 +143,6 @@ img{
 .ant-checkbox-wrapper:hover .ant-checkbox-inner, .ant-checkbox:hover .ant-checkbox-inner, .ant-checkbox-input:focus + .ant-checkbox-inner {
   border-color: $primary;
 }
-
 .ant-form-item-with-help {
   max-height: 100px;
 }
@@ -160,4 +156,69 @@ img{
   width: 100%;
 }
 
+// custom card container 
+.c-card-container{
+  width: 900px;
+  border-radius: 20px ;
+  box-shadow: 0 0 16px #00000026;
+  padding:0px !important;
+  overflow: hidden;
+  .first-container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 200px;
+      background: transparent url("../../assets/images/login-background.png") 0% 0% no-repeat padding-box;
+      background-position: top;
+      background-repeat: no-repeat;
+      background-size: cover;
+      img{
+          width: 350px;
+          &.small{
+            width: 100px;
+          }
+      }
+      p{
+          color:$white;
+          font-family: $font-bold;
+      }
+  }
+  .second-container{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: column;
+      max-width: 100% !important;
+      min-height: 400px;
+      &.with-pad{
+        padding: 0px 100px;
+      }
+  }
+}
 
+
+
+
+// custom form 
+.c-form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0px 40px 0px;
+  .form-title{
+   width: 400px;
+   color:$primary;
+   font-family: $font-bold;
+   font-size: $font-size-md;
+   margin-bottom: 15px;
+}
+  .alt-text{
+   font-size: $font-size-sm;
+}
+.ant-checkbox-wrapper {
+   span{
+       font-size: $font-size-sm;
+   }
+}
+}
