--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -12,6 +12,7 @@ $font-light : 'Montserrat-Light';
 $font-medium : 'Montserrat-Medium';
 
 //font-sizes
-$font-size-lg : 28px;
+$font-size-x-lg : 28px;
+$font-size-lg : 20px;
 $font-size-md : 13px;
 $font-size-sm : 10px;
