added signup forms

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -18,6 +18,7 @@ mark{
   background: transparent;
   font-family: Montserrat-Bold !important;
   color:$primary;
+  padding: 0px;
 }
 a{
   text-decoration: none;
