added custom select with add item option

--- a/src/uiComponents/_index.scss
+++ b/src/uiComponents/_index.scss
@@ -2,3 +2,4 @@
 @import "CFooter/CFooter";
 @import "shared/CButton/CButtons";
 @import "shared/CSlider/CSlider";
+@import "shared/CSelectWithAddItem/CSelectWithAddItem";
