--- a/src/uiComponents/shared/CButton/_CButtons.scss
+++ b/src/uiComponents/shared/CButton/_CButtons.scss
@@ -11,6 +11,9 @@
     &.light {
         background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(106,210,89,1) 0%, rgba(0,176,250,1) 100%);
     }
+    &.primary{
+        background: $primary;
+    }
     span{
         color:$white;
     }
