--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,11 +1,11 @@
 $primary: #F93069;
-$primary-color: #F93069;
 $secondary: #171C3C;
 $white: #ffffff;
 $black: #000000;
 $text-color: #545454;
-$blue:#38B6FF;
+$blue:#2A8FFF;
 $green:#7ED957;
+
 //font families
 $font-bold : 'Montserrat-Bold';
 $font-light : 'Montserrat-Light';
