--- a/src/uiComponents/_index.scss
+++ b/src/uiComponents/_index.scss
@@ -3,3 +3,4 @@
 @import "shared/CButton/CButtons";
 @import "shared/CSlider/CSlider";
 @import "shared/CSelectWithAddItem/CSelectWithAddItem";
+@import "shared/CAvatarPicker/CAvatarPicker";
