--- a/src/uiComponents/shared/CSelectWithAddItem/_CSelectWithAddItem.scss
+++ b/src/uiComponents/shared/CSelectWithAddItem/_CSelectWithAddItem.scss
@@ -1,10 +1,10 @@
 .c-select-with-add-item{
     .ant-select-selector{
-        font-size: 15px;
+        font-size: $font-size-md;
         box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3) !important;
         border: none !important;
         border-radius: 100px !important;
-        height: 40px !important;
+        height: 35px !important;
         padding: 5px 18px !important;
         box-shadow: 0 0 16px rgba(0 ,0, 0 ,0.3);
         background: #ffffff !important;
