--- a/src/uiComponents/_index.scss
+++ b/src/uiComponents/_index.scss
@@ -4,3 +4,4 @@
 @import "shared/CSlider/CSlider";
 @import "shared/CSelectWithAddItem/CSelectWithAddItem";
 @import "shared/CAvatarPicker/CAvatarPicker";
+@import "shared/CBannerWithImages/CBannerWithImages";
