--- a/src/pages/home/_Home.scss
+++ b/src/pages/home/_Home.scss
@@ -1,17 +1,28 @@
 .home{
+    position: relative;
+    top: -15px;
+    .first-banner-heading-container{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 0px 50px 0px 100px;
+    }
+    .main-heading{
+        font-size: $font-size-x-lg ;
+      }
     .ea-container{
         flex-direction: column;
         justify-self: flex-start;
         padding: 0px 50px 0px 50px;
         margin: 100px 0px 0px 0px;
         
-        h3{
-            font-size: $font-size-x-lg;
+        h4 {
+            font-size: $font-size-lg;
             text-decoration: underline;
             text-underline-position: under;
         }
         &.primary{
-            h3{
+            h4{
                 color:$primary;
             }
         }
@@ -23,6 +34,7 @@
                 display: flex;
                 flex-direction: row;
                 margin-left: 30px;
+                align-items: center;
                 &:first-of-type{
                     margin-left: 0px;
                 }
