--- a/src/pages/home/_Home.scss
+++ b/src/pages/home/_Home.scss
@@ -5,7 +5,11 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            align-items: center;
             padding: 0px 50px 0px 100px;
+            .inner-container{
+                max-width: 600px;
+            }
     }
     .main-heading{
         font-size: $font-size-x-lg ;
@@ -14,7 +18,6 @@
         flex-direction: column;
         justify-self: flex-start;
         padding: 0px 50px 0px 50px;
-        margin: 100px 0px 0px 0px;
         
         h4 {
             font-size: $font-size-lg;
