--- a/src/pages/login/_Login.scss
+++ b/src/pages/login/_Login.scss
@@ -21,3 +21,9 @@
 
             }
 }
+
+.auth-wrapper{
+    background: url('../../assets/images/auth-back.jpg');
+    background-position: center;
+    background-size: cover;
+}   
