--- a/src/uiComponents/CFooter/_CFooter.scss
+++ b/src/uiComponents/CFooter/_CFooter.scss
@@ -1,11 +1,12 @@
 .c-footer{
-    background:transparent radial-gradient(closest-side at 50% 68%, #4B4B55 -133%, #FFFFFF00 200%) -22% 0 no-repeat padding-box;
-    padding-top: 50px;
+    position: relative;
     .inner-container{
         display: flex;
         justify-content: space-between;
         padding: 50px 50px 50px 50px;
         background-color: $white;
+        z-index: 22;
+        position: relative;
         ul{
             display: flex;
             flex-direction: column;
@@ -42,4 +43,12 @@
             }
         }
     }   
+    .shadow-box{
+        background:transparent radial-gradient(closest-side at 50% 68%, #4B4B55 -133%, #FFFFFF00 200%) -22% 0 no-repeat padding-box;
+        position: absolute;
+        z-index: 3;
+        width: 100%;
+        height: 300px;
+        top: -50px;
+    }
 }
