--- a/src/pages/home/_Home.scss
+++ b/src/pages/home/_Home.scss
@@ -14,6 +14,9 @@
     .main-heading{
         font-size: $font-size-x-lg ;
       }
+      .sub-heading{
+        margin: 40px 0px 40px 0px ;
+      }
     .ea-container{
         flex-direction: column;
         justify-self: flex-start;
