--- a/src/pages/login/_Login.scss
+++ b/src/pages/login/_Login.scss
@@ -26,4 +26,6 @@
     background: url('../../assets/images/auth-back.jpg');
     background-position: center;
     background-size: cover;
+    min-height: calc(100vh - 100px);
+    padding: 25px 0px;
 }   
