--- a/src/uiComponents/shared/CButton/_CButtons.scss
+++ b/src/uiComponents/shared/CButton/_CButtons.scss
@@ -19,6 +19,7 @@
         &:focus{
             background: $primary;    
         }
+        color: $white;
     }
     &.blue{
         background: $blue;
