fixed issue in signup

--- a/src/pages/signup/_SignUp.scss
+++ b/src/pages/signup/_SignUp.scss
@@ -154,6 +154,7 @@
         align-items: center;
         &.bg-2{
             background: transparent url("../../assets/images/signup-ban-2.jpg") 0% 0% no-repeat padding-box;
+            background-size: cover;
         }
         img{
             width: 230px;
