--- a/src/uiComponents/_index.scss
+++ b/src/uiComponents/_index.scss
@@ -5,3 +5,4 @@
 @import "shared/CSelectWithAddItem/CSelectWithAddItem";
 @import "shared/CAvatarPicker/CAvatarPicker";
 @import "shared/CBannerWithImages/CBannerWithImages";
+@import "shared/CCardWithLines/CCardWithLines";
