added custom modal and also added custom drag image upload

--- a/src/pages/signup/_SignUp.scss
+++ b/src/pages/signup/_SignUp.scss
@@ -236,5 +236,8 @@
         .mail-icon{
             width: 60px;
         }
+        button {
+            text-decoration: underline;
+        }
     }
 }
