--- a/src/uiComponents/_index.scss
+++ b/src/uiComponents/_index.scss
@@ -1,7 +1,9 @@
 @import "CHeader/CHeader";
 @import "CFooter/CFooter";
 @import "shared/CButton/CButtons";
+@import "shared/CModal/CModal";
 @import "shared/CSlider/CSlider";
+@import "shared/CMediaPicker/CMediaPicker";
 @import "shared/CSelectWithAddItem/CSelectWithAddItem";
 @import "shared/CAvatarPicker/CAvatarPicker";
 @import "shared/CBannerWithImages/CBannerWithImages";
