--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -6,7 +6,9 @@ $text-color: #545454;
 $blue:#2A8FFF;
 $green:#7ED957;
 $purple:#6C5984;
+$light-purple:#CB6CE6;
 $brown: #F8B041;
+$border-color:rgba(0, 0, 0, 0.05);
 //font families
 $font-bold : 'Montserrat-Bold';
 $font-light : 'Montserrat-Light';
