added custom job item and custom job search bar

--- a/src/uiComponents/_index.scss
+++ b/src/uiComponents/_index.scss
@@ -1,6 +1,7 @@
 @import "CHeader/CHeader";
 @import "CFooter/CFooter";
 @import "shared/CButton/CButtons";
+@import "shared/CJobCard/CJobCard";
 @import "shared/CModal/CModal";
 @import "shared/CSlider/CSlider";
 @import "shared/CMediaPicker/CMediaPicker";
