--- a/src/pages/jobs/_Jobs.scss
+++ b/src/pages/jobs/_Jobs.scss
@@ -59,5 +59,10 @@
 
         }
     }
-
+    .jobs-list{
+        width: 400px;
+        padding: 15px;
+        height: calc(100vh - 190px);
+        overflow: auto;
+    }
 }
