updated job card

--- a/src/uiComponents/shared/CJobCard/_CJobCard.scss
+++ b/src/uiComponents/shared/CJobCard/_CJobCard.scss
@@ -11,6 +11,7 @@
     overflow: hidden;
     padding: 10px 10px;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, .3) !important;
+    cursor: pointer;
     p{
         margin: 0px;
         font-size: $font-size-sm;
