--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -10,3 +10,27 @@
 
 @import "../../pages/index";
 @import "../../uiComponents/index";
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 4px;
+    border-radius: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: $secondary; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: $secondary; 
+  }
