--- a/src/pages/jobs/_Jobs.scss
+++ b/src/pages/jobs/_Jobs.scss
@@ -60,8 +60,8 @@
         }
     }
     .jobs-list{
-        width: 400px;
-        padding: 15px;
+        width: 430px;
+        padding: 5px 5px 0px 5px;
         height: calc(100vh - 190px);
         overflow: auto;
     }
