fixed employter and agencies page

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -73,13 +73,13 @@ img{
   img{
     width: 600px;
     &.right-image{
-      border-radius: 25px;
+      // border-radius: 25px;
       &.lg-rad{
-        border-radius: 60px;
+        // border-radius: 60px;
       }
     }
     &.lg{
-      width: 750px;
+      // width: 750px;
     }
   }
   p{
