--- a/src/pages/_index.scss
+++ b/src/pages/_index.scss
@@ -2,4 +2,5 @@
 @import 'pricing/Pricing';
 @import 'jobs/Jobs';
 @import 'login/Login';
+@import 'employerAndAgencies/EmployerAndAgencies';
 @import 'signup/SignUp';
