fixed job seeker page

--- a/src/pages/_index.scss
+++ b/src/pages/_index.scss
@@ -3,4 +3,5 @@
 @import 'jobs/Jobs';
 @import 'login/Login';
 @import 'employerAndAgencies/EmployerAndAgencies';
+@import 'jobSeekers/JobSeekers';
 @import 'signup/SignUp';
