--- a/src/uiComponents/shared/CButton/_CButtons.scss
+++ b/src/uiComponents/shared/CButton/_CButtons.scss
@@ -52,6 +52,7 @@
     }
     span{
         color:$white;
+        font-family: $font-medium !important;
     }
     &.large {
         width: 200px;
