--- a/src/uiComponents/CFooter/_CFooter.scss
+++ b/src/uiComponents/CFooter/_CFooter.scss
@@ -3,7 +3,7 @@
     .inner-container{
         display: flex;
         justify-content: space-between;
-        padding: 50px 50px 50px 50px;
+        padding: 40px 50px 50px 50px;
         background-color: $white;
         z-index: 22;
         position: relative;
@@ -11,19 +11,19 @@
             display: flex;
             flex-direction: column;
             padding: 0px;
-            margin-top: 30px;
+            margin: 30px 10px 0px 0px;
+            min-width: 170px;
             &.info{
                 width: 500px;
                 margin-top: 0px;
                 justify-content: space-between;
-                height: 200px;
             }
             .logo{
                 width: 300px;
             }
             h3{
                 font-family: $font-bold  !important;
-                font-size: $font-size-sm;
+                font-size: $font-size-md;
                 text-decoration: underline;
                 text-underline-position: under;
                 &.green {
@@ -38,7 +38,7 @@
             }
             a,p{
                 color:$secondary;
-                font-size: $font-size-sm;
+                font-size: $font-size-md;
                 margin: 0px 0px 5px 0px;
             }
         }
