added forgot password design

--- a/src/uiComponents/shared/CJobCard/_CJobCard.scss
+++ b/src/uiComponents/shared/CJobCard/_CJobCard.scss
@@ -79,6 +79,7 @@
         .tag-text{
             color: $white;
             font-size: 9px;
+            font-family: $font-medium !important;
         }
     }
 }
