--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -376,3 +376,34 @@ img{
   border-top: 0.5px solid #bbb;
   width: 100%;
 }
+
+// custom steps
+.ant-steps-item-title::after {
+  height: 3px;
+}
+.ant-steps-item-finish > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title::after {
+  background-color: $green;
+}
+.ant-steps-item-finish .ant-steps-item-icon {
+  background-color: $green;
+  border-color: $green;
+  > .ant-steps-icon {
+    color: $white;
+    top: -2px;
+  }
+}
+.ant-steps-small{
+  .ant-steps-item-title {
+    padding-right: 0px;
+  }
+  .ant-steps-item-icon {
+    margin: 0 0px 0 0;
+  }
+  &.ant-steps-horizontal:not(.ant-steps-label-vertical) .ant-steps-item {
+  padding-left: 0px;
+}
+}
+.ant-steps-item-process > .ant-steps-item-container > .ant-steps-item-icon {
+  background: $green;
+  border-color: $green;
+}
