--- a/src/uiComponents/shared/CButton/_CButtons.scss
+++ b/src/uiComponents/shared/CButton/_CButtons.scss
@@ -10,6 +10,13 @@
     background: transparent linear-gradient(90deg, #FF245E 0%, #C864DD 100%) 0% 0% no-repeat padding-box;
     &.light {
         background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(106,210,89,1) 0%, rgba(0,176,250,1) 100%);
+        &:hover{
+            background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(106,210,89,1) 0%, rgba(0,176,250,1) 100%);
+        }
+        &:focus{
+            background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(106,210,89,1) 0%, rgba(0,176,250,1) 100%);
+        }
+        color: $white;
     }
     &.primary{
         background: $primary;
@@ -65,4 +72,8 @@
         background: transparent linear-gradient(90deg, #FF245E 0%, #C864DD 100%) 0% 0% no-repeat padding-box;
 
     }
+}
+.ant-btn:hover, .ant-btn:focus {
+    color: $white !important;
+  
 }
