--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -387,9 +387,17 @@ img{
 .ant-steps-item-finish .ant-steps-item-icon {
   background-color: $green;
   border-color: $green;
-  > .ant-steps-icon {
+  .ant-steps-icon {
     color: $white;
     top: -2px;
+  }
+}
+.ant-steps-item-icon {
+  background-color: $green;
+  border-color: $green;
+  .ant-steps-icon {
+    color: $white;
+    top: 0px;
   }
 }
 .ant-steps-small{
