--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -26,7 +26,7 @@
    
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: $secondary; 
+    background: $primary; 
     border-radius: 10px;
   }
   
