added boiler for job details card

--- a/src/uiComponents/_index.scss
+++ b/src/uiComponents/_index.scss
@@ -9,3 +9,4 @@
 @import "shared/CAvatarPicker/CAvatarPicker";
 @import "shared/CBannerWithImages/CBannerWithImages";
 @import "shared/CCardWithLines/CCardWithLines";
+@import "shared/CJobDetailsCard//CJobDetailsCard";
