--- a/src/pages/jobs/_Jobs.scss
+++ b/src/pages/jobs/_Jobs.scss
@@ -1,6 +1,7 @@
 .jobs-page{
     .header-wrapper{
         height: 130px;
+        padding:0px 50px 0px 50px;
         background: rgb(2,0,36);
         background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(52,30,91,1) 0%, rgba(245,38,102,1) 100%);
         .header{
@@ -9,10 +10,10 @@
                 width: 100%;
                 height: 100%;
                 justify-content: space-between;
+                padding: 0px 5px;
                 .form-fields{
                     display: flex;
                     align-items: center;
-                    padding: 0px 0px 0px 5px;
                 .c-input{
                     margin: 0px;
                     &:first-of-type{
@@ -60,12 +61,18 @@
 
         }
     }
+    .jobs-wrapper {
+        display: flex;
+        padding:10px 50px 10px 40px;
     .jobs-list{
-        width: 430px;
-        padding: 5px 5px 0px 5px;
+        width: 500px;
+        padding: 10px;
         height: calc(100vh - 210px);
         overflow: auto;
-        
     }
-    
+    .job-details{
+        overflow: hidden;
+        flex: 1;
+    }
+}
 }
