--- a/src/uiComponents/CFooter/_CFooter.scss
+++ b/src/uiComponents/CFooter/_CFooter.scss
@@ -12,10 +12,10 @@
             flex-direction: column;
             padding: 0px;
             margin: 30px 10px 0px 0px;
-            min-width: 170px;
+            min-width: 150px;
             &.info{
-                width: 500px;
-                margin-top: 0px;
+                width: 400px;
+                margin: 0px 50px 0px 0px;
                 justify-content: space-between;
             }
             .logo{
