--- a/src/uiComponents/shared/CButton/_CButtons.scss
+++ b/src/uiComponents/shared/CButton/_CButtons.scss
@@ -1,7 +1,10 @@
 .c-button{
     padding: 5px 10px 5px 10px;
     color: #ffffff;
-    height: 34px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 4px 25px;
     font-size: 15px;
     border-radius: 32px;
@@ -74,6 +77,17 @@
     }
     &.large {
         width: 200px;
+    }
+    &.small {
+        min-width: 90px;
+        padding: 5px 10px;
+        justify-content: center;
+        align-items: center;
+        height: auto;
+        width: auto;
+        span{
+            font-size: $font-size-sm;
+        }
     }
     &:hover{
         background: transparent linear-gradient(90deg, #FF245E 0%, #C864DD 100%) 0% 0% no-repeat padding-box;
