--- a/src/uiComponents/shared/CJobDetailsCard/_CJobDetailsCard.scss
+++ b/src/uiComponents/shared/CJobDetailsCard/_CJobDetailsCard.scss
@@ -1,7 +1,7 @@
 .c-job-detail-card {
     .header{
         position: relative;
-        height: 300px;
+        height: 220px;
         display: flex;
         justify-content: space-between;
         padding: 30px;
@@ -12,6 +12,7 @@
             top: 0;
             left: 0%;
             height: 100%;
+            width: 100%;
             z-index: -2;
         }
 
@@ -42,17 +43,20 @@
                 align-items: flex-start;
                 flex-direction: column;
                 margin: 0px 0px 0px 10px;
+
                 .job-title{
                     color:$white;
                     margin: 0px;
                     font-family: $font-light;
                     font-size: $font-size-md;
+                    text-transform: uppercase;
                 }
 
                 .job-company{
                     color:$white;
-                    margin: 5px 0px;
-                }
+                    margin: 5px 0px; 
+                    font-size: $font-size-lg;
+                } 
 
                 .job-sector{
                     color:$white;
